--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
+    "localstoragedb": "^2.3.2",
+    "md5": "^2.3.0",
     "node-sass": "^7.0.1",
     "paho-mqtt": "^1.1.0",
     "react": "^17.0.2",
